--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
  */
 
 /* Icons styling */
-
+/* 
 .demo-link {
   font-size: 32px;
   text-decoration: none;
@@ -50,4 +50,40 @@ body {
   content: "\f35d";
   font-size: 22px;
   margin-left: 10px;
+} */
+
+/* Special effects */
+
+.demo-link {
+  font-size: 32px;
+  text-decoration: none;
+  color: red;
+  display: inline-block;
+  position: relative;
+}
+
+.demo-link::before,
+.demo-link::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  position: absolute;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+}
+.demo-link::before {
+  top: 0;
+  left: 0;
+  transform-origin: right;
+}
+.demo-link::after {
+  bottom: 0;
+  left: 0;
+  transform-origin: left;
+}
+
+.demo-link:hover::before,
+.demo-link:hover::after {
+  transform: scaleX(1);
 }
